Made it look decent

--- a/index.html
+++ b/index.html
@@ -7,24 +7,23 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
+		<h1 class="name">Nicholas Christopher</h1>
+		<a href="https://twitter.com/nickhasoccured">
+			<img src="icons/twitter.svg" alt="Twitter @nickhasoccured" />
+		</a>
+		<a href="https://github.com/nickhasoccured">
+			<img src="icons/github.svg" alt="GitHub @nickhasoccured" />
+		</a>
 		<p>
-			This website is still under construction! In the mean time, here's
-			where I'm at on the internet:
+			I also use Discord, I'm <span class="discord">nickhasoccured#2884</span><br>
+			You can email me at
+			<a href="mailto:nchristopher@tuta.io">nchristopher@tuta.io</a>
 		</p>
-		<ul>
-			<li>
-				Twitter:
-				<a href="https://twitter.com/nickhasoccured">@nickhasoccured</a>
-			</li>
-			<li>
-				GitHub:
-				<a href="https://github.com/nickhasoccured">@nickhasoccured</a>
-			</li>
-			<li>Discord: nickhasoccured#2884</li>
-			<li>
-				Email:
-				<a href="mailto:nchristopher@tuta.io">nchristopher@tuta.io</a>
-			</li>
-		</ul>
+		<footer>
+			© 2021 Nicholas Christopher •
+			<a href="https://github.com/nickhasoccured/nchristopher.me"
+				>Source</a
+			>
+		</footer>
 	</body>
 </html>
