Added button for Discord

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 		<a href="https://github.com/nickhasoccured">
 			<img src="icons/github.svg" alt="GitHub @nickhasoccured" />
 		</a>
+		<a href="#" onclick="alert('nickhasoccured#2884')">
+			<img src="icons/discord.svg" alt="Discord nickhasoccured#2884" />
+		</a>
 		<p>
-			I also use Discord, I'm <span class="discord">nickhasoccured#2884</span><br>
 			You can email me at
 			<a href="mailto:nchristopher@tuta.io">nchristopher@tuta.io</a>
 		</p>
