--- a/index.html
+++ b/index.html
@@ -8,25 +8,69 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<h1 class="name">Nicholas Christopher</h1>
-		<a href="https://twitter.com/nickhasoccured">
-			<img src="icons/twitter.svg" alt="Twitter @nickhasoccured" />
-		</a>
-		<a href="https://github.com/nickhasoccured">
-			<img src="icons/github.svg" alt="GitHub @nickhasoccured" />
-		</a>
-		<a href="#" onclick="alert('nickhasoccured#2884')">
-			<img src="icons/discord.svg" alt="Discord nickhasoccured#2884" />
-		</a>
-		<p>
-			You can email me at
-			<a href="mailto:nchristopher@tuta.io">nchristopher@tuta.io</a>
-		</p>
-		<footer>
-			© 2021 Nicholas Christopher •
-			<a href="https://github.com/nickhasoccured/nchristopher.me"
-				>Source</a
-			>
-		</footer>
+		<div class="content">
+			<h1>👋 Hello, I'm Nick</h1>
+			<p>
+				I make
+				<a href="https://github.com/nickhasoccured?tab=repositories"
+					>random things</a
+				>
+				which are useful to me or (hopefully) to others.
+				<br />Everything I do is open-source and freely licensed!
+				<br />
+				<br />I'm currently using JavaScript & Node.js, but I'm looking
+				to branch out in the future!
+			</p>
+			<h2>Projects</h2>
+			<p>Here's what I'm working on:</p>
+			<ul>
+				<li>
+					<a href="https://github.com/nickhasoccured/quoter"
+						><b>Quoter</b></a
+					>
+					- a Discord bot which stores quotes for servers & retrieves
+					them on demand. It supports listing, (randomly) displaying,
+					deleting, and editing quotes!
+				</li>
+				<li>
+					<a href="https://github.com/nickhasoccured/pps-credentials"
+						><b>PPS Credentials</b></a
+					>
+					- a tool for PPS students to generate default credentials
+					for their account.
+				</li>
+				<li>
+					<a href="https://github.com/nickhasoccured/autopublisher"
+						><b>AutoPublisher</b></a
+					>
+					- a simple Discord bot that automatically publishes messages
+					in announcement channels.
+				</li>
+			</ul>
+
+			<p>Thanks for visiting my website!</p>
+		</div>
+
+		<div class="footer">
+			<a href="https://twitter.com/nickhasoccured">
+				<img src="icons/twitter.svg" />
+			</a>
+			<a href="https://github.com/nickhasoccured">
+				<img src="icons/github.svg" />
+			</a>
+			<a href="#" onclick="alert('nickhasoccured#2884')">
+				<img src="icons/discord.svg" />
+			</a>
+			<a href="mailto:nchristopher@tuta.io">
+				<img src="icons/at.svg" />
+			</a>
+
+			<footer>
+				© 2021 Nicholas Christopher •
+				<a href="https://github.com/nickhasoccured/nchristopher.me"
+					>Source</a
+				>
+			</footer>
+		</div>
 	</body>
 </html>
