Centered "hello" message & added padding on sides

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div class="content">
-			<h1>👋 Hello, I'm Nick</h1>
+			<h1 class="center">👋 Hello, I'm Nick</h1>
 			<p>
 				I make
 				<a href="https://github.com/nickhasoccured?tab=repositories"
