Use Twitter waving emoji
- Uses Twitter's waving emoji from Twemoji.
- Added altenate text to icons.
- Removed top margin from social media icons.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 	</head>
 	<body>
 		<div class="content">
-			<h1 class="center">👋 Hello, I'm Nick</h1>
+			<h1 class="center">
+				<!-- Waving emoji from Twemoji - https://twemoji.twitter.com/ -->
+				<img src="icons/wave.svg" class="emoji" alt="Waving Hand" />
+				Hello, I'm Nick
+			</h1>
 			<p>
 				I make
 				<a href="https://github.com/nickhasoccured?tab=repositories"
-					>random things</a
+					>random stuff</a
 				>
 				which are useful to me or (hopefully) to others.
 				<br />Everything I do is open-source and freely licensed!
@@ -53,16 +57,16 @@
 
 		<div class="footer">
 			<a href="https://twitter.com/nickhasoccured">
-				<img src="icons/twitter.svg" />
+				<img src="icons/twitter.svg" alt="Twitter" />
 			</a>
 			<a href="https://github.com/nickhasoccured">
-				<img src="icons/github.svg" />
+				<img src="icons/github.svg" alt="GitHub" />
 			</a>
 			<a href="#" onclick="alert('nickhasoccured#2884')">
-				<img src="icons/discord.svg" />
+				<img src="icons/discord.svg" alt="Discord" />
 			</a>
 			<a href="mailto:nchristopher@tuta.io">
-				<img src="icons/at.svg" />
+				<img src="icons/at.svg" alt="Email" />
 			</a>
 
 			<footer>
