--- a/404.html
+++ b/404.html
@@ -92,6 +92,11 @@
         </div>
         <ul class="menu" id="menu" onscroll="menu_on_scroll()">
             <li>
+                <a href="https://nchristopher.me/about/" title="About">
+                    <span>About</span>
+                </a>
+            </li>
+            <li>
                 <a href="https://nchristopher.me/tags/" title="Tags">
                     <span>Tags</span>
                 </a>
@@ -113,11 +118,8 @@
 <div class="not-found">404</div>
 
     </main><footer class="footer">
-    <span>&copy; 2021 <a href="https://nchristopher.me/">Nicholas Christopher</a></span>
-    <span>&middot;</span>
-    <span>Powered by <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a></span>
-    <span>&middot;</span>
-    <span>Theme <a href="https://git.io/hugopapermod" rel="noopener" target="_blank">PaperMod</a></span>
+    <span>&copy; 2021 Nicholas Christopher</span>
+    
 </footer>
 <a href="#top" aria-label="go to top" title="Go to Top (Alt + G)">
     <button class="top-link" id="top-link" type="button" accesskey="g">
